[gd_scene load_steps=2 format=3 uid="uid://ojd07sbyn0ec"]

[ext_resource type="Script" path="res://Login.gd" id="1_3qdy0"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3qdy0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 1168.0
offset_bottom = 672.0
color = Color(0.529412, 0.529412, 0.529412, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 395.0
offset_top = 195.0
offset_right = 713.0
offset_bottom = 468.0

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="email" type="LineEdit" parent="ColorRect/VBoxContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
placeholder_text = "EMAIL"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="password" type="LineEdit" parent="ColorRect/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
placeholder_text = "PASSWORD"

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2

[node name="login" type="Button" parent="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "LOGIN"
icon_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2

[node name="signup" type="Button" parent="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "SIGNUP
"
icon_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/MarginContainer4"]
layout_mode = 2
text = "error message
"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer2/signup" to="." method="_on_signup_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
